# z-pdb

./: .gitignore  CMakeLists.txt  Readme.md  env.sh
.github/workflows/: build.yml  release.yml
cmake/: cosmo.cmake
src/: CMakeLists.txt  main.c  zip_file.c  zip_file.h
